Removed page summaries, fixed some links, fixed ToC being overlapped
- Removed page summaries from CONTRIBUTING and installation pages
- Fixed some broken links in CONTRIBUTING
- Added margin-right tag for when table of contents is being shown
(otherwise the text in the page sometimes overlaps with it)

--- a/docs/website_files/table-of-contents.css
+++ b/docs/website_files/table-of-contents.css
@@ -8,6 +8,7 @@
     main {
         position: relative;
         margin-left: 100px !important;
+        margin-right: 250px !important;
     }
     .sidetoc {
         margin-left: auto;
